some changes in graph accessors and schemagen. Add JMH benchmarks. Unify benchmarks into a single subproject. (#17)